49) If raeth build in static mode - move hw_nat hook to driver ode from external stub.<br>
50) Raeth: spin_lock_init must be after ether_setup. This may be crash system at reinit raeth.<br>
51) Now use ethtool for configure port speed and duplex (more portable and safe).<br>
52) Remove fs cleanall. Use fs fullreset instead. For details enter fs without param.<br>
53) Move high level switch configure to independed helper script config-switch.sh.<br>
54) Workaround for non correct port speed select in new SDK driver.<br>
55) Add snmpd daemon.<br>
56) Add KLogd, SysLogd and  RemoteSysLogIP variables.<br>
57) Dnsmasq update to 2.59 version.<br>
58) Enable snmp wifi drivers options.<br>
59) More clean updates.<br>
60) Fix update firmware with usb storage configured.<br>

<br>
<b>1.12.x</b><br>
1) Add l2tp vpn server init logic.<br>
2) Add detailed link statistic in wireless AP mode.<br>
3) Fix table size and webui.<br>
4) Small fixes in network init, dhcpc, iptables logic.<br>
5) Update usb-modeswitch to 1.2.0 version.<br>
6) Add and use nvram_buf_get commad for fast get group nvram variable.<br>
7) libevent update to 2.0.15 stable version.<br>
8) Update 802.1x daemon from 3.6.0.0 SDK.<br>
9) Init scripts optimize for decrease restart overhead and speedup.<br>
10) Add new runlevel W* for exclude  web_wait services from boot init thread.<br>
11) Fix restart transmission at new disk mount.<br>
12) Add iptables rules for transmission.<br>
13) Disable NAND Flash support per default. Not used NAND Flash in real routers devices. Use only in STB.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>