@@ -88,7 +88,7 @@ config  RT2860V2_AP_MEMORY_OPTIMIZATION
 config  RT2860V2_AP_VIDEO_TURBINE
 	bool "Video Turbine support"
 	depends on RT2860V2_AP
-	default n
+	default y
 
 config  RT2860V2_AP_INTELLIGENT_RATE_ADAPTION
         bool "Intelligent Rate Adaption"
