@@ -768,6 +768,7 @@
 11) Fix restart transmission at new disk mount.<br>
 12) Add iptables rules for transmission.<br>
 13) Disable NAND Flash support per default. Not used NAND Flash in real routers devices. Use only in STB.<br>
+14) WiFi drivers disable ATE mode support, disable some debug messages, disable IAPP support(need external daemon for support).<br>
 
 <br><br>
 <b>For support see:</b><br>
